# RNb-NeuS2

./: .gitignore  CMakeLists.txt  LICENSE.txt  Laure,  README.md  copy_scale_cam_npz.py  crop_idr.py  env.yml  imgui.ini  requirements.txt  run-dlmv.sh  run.sh  run_3steps.sh  run_3steps_.sh  run_60_opti.py  run_dtu_colmap.sh  run_opti_60_cmp.py  run_option_hashing  run_option_hashing.py  run_pipeline.py  run_scaled_albedo.sh  run_skoltech3d.sh  run_skoltech3d_gt.sh  run_skoltech_supernormal.sh  run_skoltech_uni_and_sdm.sh  run_supernormal.sh  run_test_debug.sh  run_with_options.py  scale_albedos.py  select_ind_idr.py  setup.py
configs/nerf/: base.json  base_save.json
configs/normal/: base.json
configs/sdf/: base.json
include/neural-graphics-primitives/: common.h  common_device.cuh  json_binding.h  marching_cubes.h  nerf_loader.h  nerf_network.h  testbed.h
meshroom/: README.md  config.json
meshroom/RNb-NeuS2/: PrepareRNbNeuS2Data.py  RNbNeuS2.py  _prepare_data.py
preprocess/: CMakeLists.txt  gen_images_light_60_opti.cpp  preprocess.py  preprocess_no_lights.py  preprocess_python.py
rnb_neus2/: __init__.py  albedo_scaling.py  image_io.py  pipeline.py  prepare.py  scaling.py
rnb_neus2/dataloaders/: __init__.py  base.py  rnb_loader.py  sfm_json_loader.py  sfm_pyav_loader.py
scripts/: __init__.py  preprocess.py  scale_albedos.py
src/: main.cu  marching_cubes.cu  nerf_loader.cu  testbed.cu  testbed_nerf.cu
tests/: test_dilation.py  test_displacement_analysis.py  test_hypothesis.py  test_mesh_projection.py  test_prepare_albedo_alpha.py
(+12 files in other folders)
